@@ -26,6 +26,7 @@ FIXES
 * Fix for typos in TAC, CMD CGIs (bugs #150, #144, #148)
 * Fix for types in documentation (bugs #145, #105)
 * Fix for incorrect host state counts in status CGI when viewing servicegroups (bug #72)
+* Fix for new Splunk integration query parameters (bug #136)
 
 WARNINGS
 
